# ore-cli

./: .bashrc  .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  airdropDevnetSol.sh  airdropSol.sh  build.sh  build_and_mine.sh  closeAccounts.sh  coingeckoDownloadPrice.sh  createwallet.sh  devnetValidator.sh  entrypoint.sh  flake.nix  key.json  lookupPrices.sh  loop_unclaimedbalance.sh  miner.sh  noise.txt  ore_env.priv.sh.sample  ore_env.sh  ore_miner_controller.config  ore_miner_controller.sh  rust-toolchain.toml  setup.sh  stakeOre.sh  startMiner.sh  supervision.sh  unclaimedbalance.sh  walletBalance.sh  walletBalance.sh.loop  watchStats.sh  withdrawStakedOre.sh
.github/workflows/: cargo-build.yml  docker-build.yml  rust-build.yml  rust-test.yml  rust.yml
data/: 0.txt  1.txt  10.txt  11.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
src/: account.rs  args.rs  balance.rs  benchmark.rs  blockhash.rs  boost.rs  busses.rs  bx.rs  checkpoint.rs  chop.rs  claim.rs  close.rs  config.rs  craft.rs  cu_limits.rs  dynamic_fee.rs  equip.rs  error.rs  estimate_fees.rs  event.rs  foreman.rs  initialize.rs  inspect.rs  main.rs  messages.rs  mine.rs  miner.rs  miner_v2.rs  open.rs  pause.rs  pool.rs  program.rs  proof.rs  rank.rs  register.rs  replant.rs  reprocess.rs  reserve.rs  rewards.rs  rotate.rs  (+14 more)
src/command/: account.rs  benchmark.rs  checkpoint.rs  claim.rs  initialize.rs  lut.rs  mine.rs  mod.rs  open.rs  pool.rs  program.rs  stake.rs  transaction.rs  transfer.rs
src/old/: register.rs  rewards.rs  send_and_confirm.rs  update_admin.rs
src/send/: mod.rs  priority_fee.rs  send_and_confirm.rs
src/utils/: io.rs  mod.rs  rpc.rs  table.rs
