[package]
name = "coal-cli"
version = "2.7.2"
edition = "2021"
license = "Apache-2.0"
description = "A command line interface for COAL cryptocurrency mining."
homepage = "https://coal.digital"
repository = "https://github.com/coal-digital/coal-cli"
readme = "./README.md"
keywords = ["solana", "crypto", "mining"]

[[bin]]
name = "coal"
path = "src/main.rs"

[features]
default = []
admin = []

[dependencies]
bincode = "1.3.3"
bs58 = "0.5.1"
bytemuck = "1.16"
cached = "0.46.1"
chrono = "0.4.38"
clap = { version = "4.4.12", features = ["derive"] }
colored = "2.0"
core_affinity = "0.8.1" 
drillx = "2.1.0"
futures = "0.3.30"
indicatif = "0.17.8"
num_cpus = "1.16.0"
mpl-core = "0.8.0"
coal-api = "2.5.2"
coal-utils = "2.5.2"
smelter-api = "1.0.1"
smelter-utils = "1.0.1"
forge-api = "1.0.2"
forge-utils = "1.0.2"
ore-api = "=2.1.9"
ore-utils = "=2.1.9"
rand = "0.8.4"
reqwest = { version = "0.12", features = ["json"] }
solana-cli-config = "^1.18"
solana-client = "^1.18"
solana-program = "^1.18"
solana-rpc-client = "^1.18"
solana-sdk = "^1.18"
solana-transaction-status = "^1.18"
serde_json = "1.0"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^2.3", features = [
  "no-entrypoint",
] }
tokio = "1.35.1"
url = "2.5"
tokio-tungstenite = "0.16"
serde = { version = "1.0", features = ["derive"] }

# [patch.crates-io]
# drillx = { path = "../drillx/drillx" }
# coal-api = { path = "../coal/api" }
# coal-utils = { path = "../coal/utils" }
# ore-api = { path = "../ore/api" }
# ore-utils = { path = "../ore/utils" }
# smelter-api = { path = "../smelter/api" }
# smelter-utils = { path = "../smelter/utils" }
# forge-api = { path = "../forge/api" }
# forge-utils = { path = "../forge/utils" }

