[package]
name = "ore-cli"
version = "3.3.0"
edition = "2021"
license = "Apache-2.0"
description = "A command line interface for ORE cryptocurrency mining."
documentation = "https://ore.supply"
homepage = "https://ore.supply"
repository = "https://github.com/regolith-labs/ore-cli"
readme = "./README.md"
keywords = ["solana", "crypto", "mining"]

[[bin]]
name = "ore"
path = "src/main.rs"

[features]
default = []
admin = []

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
bs58 = "0.5.1"
b64 = "0.4.0"
bytemuck = { version = "1.16", features = ["derive"] }
cached = "0.46.1"
chrono = "0.4.38"
clap = { version = "4.4.12", features = ["derive"] }
colored = "2.0"
core_affinity = "0.8.1"
crossterm = "0.28.1"
drillx = "2.1.0"
futures = "0.3.30"
indicatif = "0.17.8"
mpl-token-metadata = "5.1"
num_cpus = "1.16.0"
ore-api = "3.0"
ore-boost-api = "1.4"
ore-pool-api = "1.4"
ore-pool-types = "1.4"
url = "2.5"
rand = "0.8.4"
reqwest = { version = "0.12", features = ["json"] }
# solana-account-decoder = "2.1"
solana-cli-config = "2.1"
solana-client = "2.1"
solana-rpc-client = "2.1"
solana-program = "2.1"
solana-sdk = "2.1"
solana-transaction-status = "2.1"
serde_json = "1.0"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^6", features = ["no-entrypoint"] }
serde = { version = "1.0", features = ["derive"] }
steel = "3.0"
thiserror = "1.0.63"
tokio = "1.35.1"
tokio-tungstenite = "0.16"
tabled = { version = "0.17.0", features = ["ansi"] }

[profile.release]
opt-level = 3           # Optimize for binary size. You can use "3" for full optimizations if binary size isn't an issue.
codegen-units = 1       # Better optimization with fewer codegen units
lto = true              # Enable Link Time Optimization (LTO)
debug = false           # Disable debug info to reduce binary size
panic = 'abort'         # Reduces the binary size further by not including unwinding information
rpath = false
incremental = false
overflow-checks = false

[build]
rustflags = ["-C", "target-cpu=native"]
